added company name

--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
 
                     <div>
                         <h5>Software Engineer</h5>
-                        <h6>Lodz, Poland</h6>
+                        <h6>Infosys BPM</h6>
+                        <p>Lodz, Poland</p>
                         <p>As a Software Engineer, I have cultivated extensive expertise in web application development,
                             focusing primarily on C# technologies. My responsibilities encompassed the design,
                             implementation, and maintenance of web applications that deliver exceptional user
@@ -318,7 +319,8 @@
                     </div>
                     <div>
                         <h5>Web Developer Intern</h5>
-                        <h6>Baku, Azerbaijan</h6>
+                        <h6>Veyseloglu MMC</h6>
+                        <p>Baku, Azerbaijan</p>
                         <p>During my tenure as a Front-End Developer Intern, I gained invaluable hands-on
                             experience in crafting dynamic and user-friendly web interfaces. My role focused
                             on web design and implementation using HTML, CSS, and JavaScript, with an
